terminei o modo escuro

--- a/src/ui/AppLogIn.css
+++ b/src/ui/AppLogIn.css
@@ -19,7 +19,7 @@ body.dark{
     --textinho: #bbbbbb;
     --fundo: #000000;
     --fundo-destaque: #141414;
-    --cinza: #1F1F1F;
+    --cinza: #5a5a5a;
     --azul-escuro: #6096BA;
     --azul: #002A5E;
     --azul-cinza: #4F6082;
@@ -36,236 +36,3 @@ body.dark{
 
 
 
-
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
-body, #root {
-  font-family: 'Roboto', Arial, sans-serif;
-}
-
-* {
-  font-family: 'Roboto', Arial, sans-serif;
-}
-
-html, body, #root {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-body::-webkit-scrollbar {
-  display: none;
-}
-body {
-  -ms-overflow-style: none;  /* IE e Edge */
-  scrollbar-width: none;     /* Firefox */
-}
-
-.conteiner {
-  min-height: 100vh;
-  margin: 0;
-  padding: 2rem;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-background: radial-gradient(
-  circle at 32% 21%,
-  var(--azul-claro) 0.8%,      
-  var(--azul) 91.6%,     
-  var(--azul-escuro) 100%      
-);
-
-
-  /*background: url('src/ui/assets/gradiente.png') no-repeat center center fixed;*/
-  background-size: cover;
-}
-
-.conteiner.dark {
-background: radial-gradient(
-  circle at 32% 21%,
-  var(--azul-claro) 0.8%,      
-  var(--azul) 91.6%,     
-  var(--azul-escuro) 100%      
-);
-}
-
-#cx1 {
-  top: 0;
-  left: 0;
-  width: 60%;
-  height: auto;
-  background-color: var(--fundo);
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#logo {
-  width: 18%;
-  height: auto;
-  margin-bottom: 2rem;
-}
-
-#textao {
-  font-size: 3.5vw;
-  color: var(--texto-azul);
-  margin-bottom: 1rem;
-  font-family: 'Nunito Sans';
-  font-weight: 400;
-}
-
-#cx2{
-  width: 55%;
-  height: auto;
-  background-color: var(--cinza);
-  border-radius: 20px;
-  padding-left: 3%;
-  padding-right: 3%;
-}
-
-#p1 {
-  font-size: 1vw;
-  color: var(--texto);
-}
-
-#cx3 {
-  width: 100%;
-  height: auto;
-  align-items: center;
-  margin-top: 2rem;
-  margin-bottom: 3%;
-}
-
-.btnA{
-  width:20%;
-  height: auto;
-  padding: 1%;
-  background-color: var(--azul-escuro);
-  color: var(--texto-destacado);
-  border: none;
-  border-radius: 15px;
-  font-size: 1.1vw;
-  cursor: pointer;
-  margin: 0.5vw;
-  text-align: center;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15); /* sombra suave */
-}
-
-
-
-.btnA-selected {
-  background-color: var(--azul-escuro) !important;
-  color: var(--texto-destacado) !important;
-  border: 2px solid var(--azul-escuro);
-}
-
-#btn1 {
-  background-color: var(--fundo);
-  color: var(--texto);
-}
-
-#btn1:not(.btnA-selected),
-#btn2:not(.btnA-selected) {
-  background-color: var(--fundo-destaque);
-  color: var(--azul-escuro);
-  border: 2px solid var(--fundo);
-}
-
-
-
-.txt1{
-  padding: 0.5rem;
-  font-size: 1.0vw;
-  border: 1px solid var(--texto); 
-  background-color: var(--fundo);
-  color: var(--texto);
-}
-.textinho{
-  font-size: 1vw;
-  color: var(--textinho);
-}
-
-#cx4 {
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  text-align: start;
-  align-items: center;
-}
-
-.cx4-1{
-  width: 35%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1%;
-}
-
-.cadastro-input{
-    background-color: var(--fundo);
-  color: var(--texto);
-}
-
-.btn-cadastrar {
-  width: 19%;
-  display: flex;
-  align-items: center;
-  background-color: var(--fundo-destaque);
-  color: var(--azul-escuro);  
-  border: var(--azul-escuro) solid 0.1px;
-  border-radius: 35px;
-  font-size: 1vw;
-  cursor: pointer;
-  margin-top: 1.5rem;
-}
-
-.btn-cadastrar:hover {
-  background: var(--azul-escuro);
-  color: var(--texto-destacado);
-}
-
-.btn-cadastrar-img {
-  width: 2vw;
-  height: auto;
-  object-fit: contain;
-  margin-right: 0.4rem;
-}
-
-.btn-cadastrar-divider {
-  width: 0.1%;
-  height: 2.5vw;
-  background: var(--azul-escuro);
-  margin-right: 1rem;
-  margin-left: 1rem;
-}
-
-.btn-cadastrar-text {
-  font-size: 100%;
-  letter-spacing: 1px;
-}
-
-#cx5{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: auto;
-  justify-content: center;
-  align-items: center;
-  margin-top: 2rem;
-}
-
-#cx5 a{
-  font-size: 1vw;
-  color: var(--azul-escuro);
-   border-bottom: 0.1px solid var(--azul-escuro);
-}
-#cx5 a:hover {
-  color: var(--cinza);
-    border-bottom: 0.1px solid var(--cinza);
-  cursor: pointer;
-}
