--- a/src/ui/components/catalogacao.css
+++ b/src/ui/components/catalogacao.css
@@ -9,7 +9,7 @@
 }
 
 .catalogacao-modal {
-  background: #fff;
+  background: var(--fundo-destaque);
   border-radius: 1.5vw;
   box-shadow: 0 2px 16px rgba(10,68,137,0.13);
   padding: 0vw 2vw 3vw 2vw;;      
@@ -78,7 +78,7 @@
 .catalogacao-capa-placeholder {
   width: 220px;
   height: 220px;
-  background: #f3f6fa;
+  background: var(--fundo);
   border-radius: 0.7vw;
   display: flex;
   align-items: center;
@@ -98,7 +98,7 @@
 
 .catalogacao-form-col label {
   font-size: 1.15vw;
-  color: #222;
+  color: var(--texto);
   font-weight: 600;
   display: flex;
   flex-direction: row;
@@ -118,8 +118,8 @@
   border-radius: 0.3vw;
   padding: 0 0.6vw;
   font-size: 1.1vw;
-  background: #f3f6fa;
-  color: #222;
+  background: var(--fundo);
+  color: var(--texto);
   outline: none;
   transition: border 0.2s;
   margin-left: 0;
@@ -130,7 +130,7 @@
 .catalogacao-form-col input:focus,
 .catalogacao-form-col select:focus {
   border: 1.5px solid #0A4489;
-  background: #fff;
+  background: var(--fundo-destaque);
 }
 
 .catalogacao-sinopse {
@@ -142,8 +142,8 @@
   border: 1.5px solid #bfc9d1;
   font-size: 1.1vw;
   padding: 0.6vw;
-  background: #f3f6fa;
-  color: #222;
+  background: var(--fundo);
+  color: var(--texto);
   outline: none;
   transition: border 0.2s;
   resize: none;
@@ -152,7 +152,7 @@
 
 .catalogacao-sinopse:focus {
   border: 1.5px solid #0A4489;
-  background: #fff;
+  background: var(--fundo);
 }
 
 /* Botões */
@@ -175,7 +175,7 @@
 .catalogacao-etiqueta,
 .catalogacao-cancelar,
 .catalogacao-salvar {
-  background: #fff;
+  background: var(--fundo);
   color: #0A4489;
   border: 1.5px solid #0A4489;
   border-radius: 35px;
@@ -193,12 +193,12 @@
 .catalogacao-cancelar:hover,
 .catalogacao-salvar:hover {
   background: #0A4489;
-  color: #fff;
+  color: var(--texto);
 }
 
 
 .catalogacao-upload-btn {
-  background: #fff;
+  background: var(--fundo);
   color: #0A4489;
   border: 1.5px solid #0A4489;
   border-radius: 35px;
