--- a/src/ui/components/menu.css
+++ b/src/ui/components/menu.css
@@ -1,3 +1,23 @@
+nav{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+#base-menu {
+    display: flex;
+    height: '100%';
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.div-btn {
+ width: 90%;
+}
+
+
 .menu {
     min-width: 200px; /* opcional: garante largura mínima */
     max-width: 260px; /* opcional: limita largura máxima */
@@ -8,6 +28,39 @@
     display: flex;
     flex-direction: column;
     background: var(--fundo-destaque);
+}
+
+.tema-btn {
+  display: flex;
+    align-items: center;
+    background: none;
+    border: none;
+    border-radius: 1.4vw;
+    font-size: 0.7vw;
+    color: var(--azul-escuro);
+    cursor: pointer;
+    transition: background 0.2s;
+    font-family: inherit;
+    position: relative;
+    width: 90%;
+    border: solid var(--texto) 1.5px;
+    margin-bottom: 1vw;
+    align-self: center;
+}
+
+.tema-btn:hover{
+    background: var(--cinza);
+}
+
+.tema-btn span {
+    background-color: var(--texto);
+    width: 1.3px;
+    height: 100%;
+}
+
+.tema-btn p {
+    margin-left: 1vw;
+    margin-right: 1vw;
 }
 
 .menu-btn {
@@ -25,6 +78,8 @@
     font-family: inherit;
     position: relative;
     width: 100%;
+    height: 3vw;
+    
 }
 
 .menu-btn .chevron {
@@ -45,11 +100,9 @@
 }
 
 .submenu {
-    width: 90%;
-    margin: 0 auto 0.7vw auto;
-    background: var(--fundo);
+    width: 80%;
+    background: var(--fundo--destaque);
     border-radius: 1vw;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.04);
     display: flex;
     flex-direction: column;
     gap: 0.2vw;
@@ -63,8 +116,7 @@
     background: none;
     border: none;
     color: var(--azul-escuro);
-    font-size: 1.05vw;
-    padding: 0.5vw 0.5vw 0.5vw 0;
+    font-size: 1vw;
     border-radius: 0.7vw;
     cursor: pointer;
     width: 100%;
