--- a/src/ui/empretimoHistorico.css
+++ b/src/ui/empretimoHistorico.css
@@ -30,7 +30,7 @@
   margin: 0 0 2vw 4vw;
   display: flex;
   align-items: center;
-  background: var(--fundo);
+  background: var(--fundo-destaque);
   border-radius: 2vw;
   box-shadow: 0 2px 8px rgba(0,0,0,0.04);
   padding: 0 1vw;
@@ -53,13 +53,14 @@
 
 .emprestimoHistorico-tabela-container {
   width: 97%;
-  background: var(--fundo);
+  background: var(--fundo-destaque);
   border-radius: 1vw;
   box-shadow: 0 2px 8px rgba(0,0,0,0.07);
   margin: 1vw 0 0 4vw;
   overflow-x: auto;
   padding-bottom: 1vw;
   position: relative;
+  color: var(--texto);
 }
 
 .emprestimoHistorico-tabela {
