--- a/src/ui/infoAcervo.css
+++ b/src/ui/infoAcervo.css
@@ -26,6 +26,7 @@
   min-width: 340px;
   position: relative;
   flex: 1;
+  display: flex;
 }
 .info-acervo-geral h2 {
   color: #0A4489;
@@ -37,7 +38,7 @@
   font-size: 1vw;
 }
 
-button {
+.voltar {
   background: var(--fundo);
   color: #0A4489;
   border: 1.5px solid #0A4489;
@@ -51,6 +52,49 @@ button {
   gap: 0.5vw;
   transition: background 0.2s, color 0.2s;
 }
+
+.lixo{
+  display: flex;
+  flex-direction: end;
+}
+
+.lixo button {
+  background: #fff;
+  border: 2px solid #e53935;
+  color: #e53935;
+  border-radius: 50%;
+  width: 3vw;
+  height: 3vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+  margin-left: auto;
+  margin-bottom: 1vw;
+}
+
+.lixo button:hover {
+  background: #e53935;
+  color: #fff;
+  transform: scale(1.05);
+  margin-left: auto;
+}
+
+.lixo button:active {
+  transform: scale(0.95);
+}
+
+.lixo svg {
+  width: 1.2vw;
+  height: 1.2vw;
+}
+
+
+
+
+
 .info-acervo-status {
   background: #fff;
   border-radius: 1vw;
@@ -91,6 +135,12 @@ button {
   overflow-wrap: break-word;
   width: 100%;
 }
+
+.div-direita {
+  margin-left: auto;
+  align-self: flex-start;
+}
+
 
 
 .status-emprestado { color: #e6b800; font-weight: 500; }
