--- a/src/ui/cadastro.css
+++ b/src/ui/cadastro.css
@@ -23,7 +23,7 @@ body {
 }
 
 #cadastro-root {
-  width: 50%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -51,12 +51,13 @@ body {
   border-radius: 20px;
   padding: 1vw;
   font-size: 1vw;
-  width: 40%;
+  width: 60%;
   text-align: center;
+  margin: 1vw;
 }
 
 #cadastro-form {
-  width: 60%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
