--- a/src/ui/postagens.css
+++ b/src/ui/postagens.css
@@ -35,6 +35,7 @@
   background: transparent;
   font-size: 1vw;
   border-radius: 2vw;
+    color: var(--texto);
 }
 .forum-busca svg {
   color: var(--azul-escuro);
@@ -149,4 +150,35 @@
 .forum-card-more {
   color: var(--texto);
   cursor: pointer;
+}
+
+.forum-card-more {
+  position: relative;
+}
+
+.forum-more-menu {
+  position: absolute;
+  top: 25px;
+  right: 0;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  padding: 6px 0;
+  width: 130px;
+  z-index: 10;
+  box-shadow: 0px 4px 10px rgba(0,0,0,0.15);
+}
+
+.forum-more-menu button {
+  width: 100%;
+  padding: 8px;
+  text-align: left;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.forum-more-menu button:hover {
+  background: #f2f2f2;
 }
