--- a/src/ui/emprestimos.css
+++ b/src/ui/emprestimos.css
@@ -19,7 +19,7 @@
     font-weight: 600;
     margin: 2vw 0 2vw 4vw;
     font-size: 2vw;
-    align-self: flex-start;
+    align-self: center;
 }
 
 /* Filtros */
