--- a/src/ui/empretimoHistorico.css
+++ b/src/ui/empretimoHistorico.css
@@ -11,7 +11,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   padding: 2vw;
   box-sizing: border-box;
   
