--- a/src/ui/denuncias.css
+++ b/src/ui/denuncias.css
@@ -15,7 +15,7 @@ span {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   padding: 2vw 0;
   box-sizing: border-box;
 }
