--- a/mobile/app/src/main/res/layout/activity_configuracoes.xml
+++ b/mobile/app/src/main/res/layout/activity_configuracoes.xml
@@ -32,6 +32,7 @@
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical"
+        android:padding="10dp"
         android:layout_marginBottom="77dp">
         <FrameLayout
             android:layout_width="wrap_content"
@@ -46,6 +47,7 @@
             android:layout_marginBottom="10dp"
             android:contentDescription="@string/desc_foto_perfil"
             android:scaleType="centerCrop"
+            android:clipToOutline="true"
             android:background="@drawable/img_perfil_formato"
             android:src="@drawable/img_perfil" />
 
