--- a/mobile/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/mobile/app/src/main/res/layout/activity_editar_perfil.xml
@@ -50,6 +50,7 @@
                     android:layout_marginBottom="10dp"
                     android:contentDescription="@string/desc_foto_perfil"
                     android:scaleType="centerCrop"
+                    android:clipToOutline="true"
                     android:background="@drawable/img_perfil_formato"
                     android:src="@drawable/img_perfil" />
                 <ImageButton
